tests/fixtures/invalid/pow_bool_str_bool.py
# Cannot call pow() with Bool, Str, Bool
x = pow(True, "hello", True)
